Adds a python script which greets Hello Capstone

--- a/assignment1_coursera.ipynb
+++ b/assignment1_coursera.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  This Project depicts the use of Git Hub Repository concepts."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
